add flask_admin and wrap flask admin around model

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,34 +1,121 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <link
+      href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"
+      rel="stylesheet"
+    />
+    <!-- <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}" /> -->
 
-<head>
-  <meta charset="utf-8" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script>
-
-  <title>TicketBox</title>
-</head>
-
-<body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="navbar-nav">
-      <a class="nav-item nav-link" href="{{ url_for('index') }}">Home</a>
-      <a class="nav-item nav-link" href="{{ url_for('events.add') }}">Add Event</a>
-      <a class="nav-item nav-link" href="{{ url_for('events.list') }}">List of Events</a>
-      <a class="nav-item nav-link" href="{{ url_for('events.delete') }}">Delete Event</a>
+    <title>TicketBox</title>
+  </head>
+  <body class="bodyBack">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link" href="{{ url_for('index') }}">Tickets</a>
+          <!-- Event button -->
+          <div class="btn-group">
+            <button
+              type="button"
+              class="btn btn-outline-primary dropdown-toggle"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              Event
+            </button>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="{{ url_for('event.add') }}"
+                >Add Event</a
+              >
+              <a class="dropdown-item" href="{{ url_for('event.list') }}"
+                >List Event</a
+              >
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="{{ url_for('event.delete') }}"
+                >Delete Event</a
+              >
+            </div>
+          </div>
+          <!-- User button -->
+          <div class="btn-group">
+            <button
+              type="button"
+              class="btn btn-outline-primary dropdown-toggle"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              User
+            </button>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="{{ url_for('user.add') }}"
+                >Add User</a
+              >
+              <a class="dropdown-item" href="{{ url_for('user.list') }}"
+                >List User</a
+              >
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="{{ url_for('user.delete') }}"
+                >Delete User</a
+              >
+              <a class="dropdown-item" href="{{ url_for('user.login') }}"
+                >login</a
+              >
+              <a class="dropdown-item" href="{{ url_for('user.logout') }}"
+                >logout</a
+              >
+            </div>
+          </div>
+          <a class="nav-item nav-link" href="{{ url_for('admin') }}">Admin</a>
+          <div class="pull-right">
+            <h4>hello {{ current_user.user_name }}</h4>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <div class="container">
+      {% with messages = get_flashed_messages(with_categories=true) %}
+      <!-- Categories: success (green), info (blue), warning (yellow), danger (red) -->
+      {% if messages %} {% for category, message in messages %}
+      <div class="alert alert-{{ category }} alert-dismissible" role="alert">
+        <button
+          type="button"
+          class="close"
+          data-dismiss="alert"
+          aria-label="Close"
+        >
+          <span aria-hidden="true">&times;</span>
+        </button>
+        <!-- <strong>Title</strong> -->
+        {{ message }}
+        {% endfor %} {% endif %} {% endwith %}
+      </div>
     </div>
-  </nav>
+    <div class="container">{% block content %} {% endblock %}</div>
 
-  {% block content %} {% endblock %}
-</body>
-
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
