--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,6 +1,9 @@
-{% extends "base.html" %} {% block content %}
-<div class="jumbotron">
-  <h1>Welcome to CoderSchool</h1>
-  <p>Please select one of the links from the nav bar.</p>
+{% extends "base.html" %}
+<div>
+  {% block content %}
+  <div class="jumbotron">
+    <h1>Welcome to CoderSchool</h1>
+    <p>Please select one of the links from the nav bar.</p>
+  </div>
+  {% endblock %} /div>
 </div>
-{% endblock %}
