--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -75,6 +75,9 @@
               >
             </div>
           </div>
+          <a class="nav-item nav-link" href="{{ url_for('user.schema') }}"
+            >Schema</a
+          >
           <a class="nav-item nav-link" href="{{ url_for('admin') }}">Admin</a>
           <div class="pull-right">
             <h4>hello {{ current_user.user_name }}</h4>
