--- a/src/templates/events/list.html
+++ b/src/templates/events/list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block content %}
 <div class="jumbotron">
-  <h1>Hello!!! Here is a list of all available User.</h1>
+  <h1>Hello!!! Here is a list of all available events.</h1>
   <div class="row">
     {% for event in events %}
     <div class="col">
