fix add event from user end. User id is automaticly add to organizer id

--- a/src/templates/events/event_detail.html
+++ b/src/templates/events/event_detail.html
@@ -13,7 +13,7 @@
         <li>{{ event.time }}</li>
         <li>{{ event.duration_end }}</li>
       </ul>
-      <a class="btn btn-info" href="/">buy ticket</a>
+      <a class="btn btn-info" href="{{ url_for('/') }}">buy ticket</a>
     </div>
   </div>
 </div>
