add ticket model

--- a/src/templates/events/event_detail.html
+++ b/src/templates/events/event_detail.html
@@ -13,7 +13,11 @@
         <li>{{ event.time }}</li>
         <li>{{ event.duration_end }}</li>
       </ul>
-      <a class="btn btn-info" href="{{ url_for('/') }}">buy ticket</a>
+      <a
+        class="btn btn-info"
+        href="{{url_for('ticket_blt.buy',evt_id=event.id )}}"
+        >buy ticket {{ event.id }}</a
+      >
     </div>
   </div>
 </div>
