--- a/src/templates/tickets/buy_ticket.html
+++ b/src/templates/tickets/buy_ticket.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} {% block content %}
 <div class="jumbotron">
   <h1>Buy Your ticket here</h1>
-  <p>Add a new ticket with the form below:</p>
+  <p>Add a new ticket with the form below for event {{ evt_id }}</p>
   <form method="POST">
     <input type="text" name="" id="" />
   </form>
